Corrected H1 removed margin-left and center aligned

--- a/css/main.css
+++ b/css/main.css
@@ -66,10 +66,9 @@ h1 {
   font-family: 'Indie Flower', cursive;
   color: #d9cccc;
   height: 100px;
-  margin-left: 700px;
   margin: 0px;
   padding: 0px;
-  font-size: 60px;
+  font-size: 64px;
 }
 
 h2 {
